--- a/app/src/main/res/layout/edit_member.xml
+++ b/app/src/main/res/layout/edit_member.xml
@@ -107,6 +107,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/radiobutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -159,7 +160,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/Nicknameframe"
+                android:id="@+id/Emailframe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
