--- a/app/src/main/res/layout/become_store.xml
+++ b/app/src/main/res/layout/become_store.xml
@@ -37,21 +37,21 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/Member_frame"
+                android:id="@+id/Name_frame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/MemberNumber"
+                    android:id="@+id/UserName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   帳號:"
+                    android:text="   名稱:"
                     android:textSize="40sp" />
 
                 <EditText
-                    android:id="@+id/memberNumber"
+                    android:id="@+id/userName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -61,21 +61,21 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/Password_frame"
+                android:id="@+id/Address_frame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/Password"
+                    android:id="@+id/Address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   密碼:"
+                    android:text="   地址:"
                     android:textSize="40sp" />
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -84,103 +84,140 @@
                     android:text="Name" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/Resetpassword"
+            <LinearLayout
+                android:id="@+id/Workertime_frame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/Workertime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="營業時間:"
+                    android:textSize="36sp" />
+
+                <EditText
+                    android:id="@+id/workertime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Name" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/Parking_frame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/Parking"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="停車資訊:"
+                    android:textSize="36sp" />
+
+                <EditText
+                    android:id="@+id/parking"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Name" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/phone_frame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/Phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="   電話"
+                    android:textSize="36sp" />
+
+                <EditText
+                    android:id="@+id/phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Name" />
+            </LinearLayout>
+
+
+            <LinearLayout
+            android:id="@+id/Decorating_frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/Decorating"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="店內照片:"
+                android:textSize="30sp"/>
+
+            <EditText
+                android:id="@+id/decorating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="重設密碼" />
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Name" />
 
-            <LinearLayout
-                android:id="@+id/Sex_frame"
-                android:layout_width="match_parent"
-                android:layout_height="61dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/Sex"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="  性別:"
-                    android:textSize="40sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/radiobutton"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/decoratingupdate"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:text="上傳" />
+        </LinearLayout>
 
-                <RadioGroup
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/radio_m"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:onClick="checkButton"
-                        android:text="男" />
-
-                    <RadioButton
-                        android:id="@+id/radio_f"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:onClick="checkButton"
-                        android:text="女" />
-                </RadioGroup>
-            </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/Nickname_frame"
+                android:id="@+id/Menu_frame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/Nickname"
+                    android:id="@+id/Menu"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="   暱稱:"
-                    android:textSize="40sp" />
+                    android:text="菜單照片:"
+                    android:textSize="30sp" />
 
                 <EditText
-                    android:id="@+id/nickname"
+                    android:id="@+id/menu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:text="Name" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/Emailframe"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/E-mail"
+                <Button
+                    android:id="@+id/menuupdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e-mail:"
-                    android:textSize="40sp" />
-
-                <EditText
-                    android:id="@+id/e-mail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    android:text="Name" />
+                    android:text="上傳" />
             </LinearLayout>
 
 
@@ -191,11 +228,11 @@
 
 
                 <Button
-                    android:id="@+id/confirm"
+                    android:id="@+id/registered"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="確認" />
+                    android:text="註冊" />
 
                 <Button
                     android:id="@+id/cancel"
@@ -204,6 +241,13 @@
                     android:layout_weight="1"
                     android:text="取消" />
             </LinearLayout>
+
+
+
+
+
+
+
 
 
 
