--- a/app/src/main/res/layout/addstore.xml
+++ b/app/src/main/res/layout/addstore.xml
@@ -148,11 +148,11 @@
 
 
                 <Button
-                    android:id="@+id/registered"
+                    android:id="@+id/add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="註冊" />
+                    android:text="新增" />
 
                 <Button
                     android:id="@+id/cancel"
