--- a/app/src/main/res/layout/addstore.xml
+++ b/app/src/main/res/layout/addstore.xml
@@ -43,11 +43,11 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/UserName"
+                    android:id="@+id/storename"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="店家名稱:"
+                    android:text="@string/storename"
                     android:textSize="36sp" />
 
                 <EditText
@@ -71,7 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="店家地址:"
+                    android:text="@string/storeaddress"
                     android:textSize="36sp" />
 
 
@@ -97,7 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   電話"
+                    android:text="@string/phone"
                     android:textSize="36sp" />
 
                 <EditText
@@ -122,7 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="菜單照片:"
+                    android:text="@string/menu"
                     android:textSize="30sp" />
 
                 <EditText
@@ -139,7 +139,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="上傳" />
+                    android:text="@string/update" />
             </LinearLayout>
 
 
@@ -154,14 +154,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="新增" />
+                    android:text="@string/add" />
 
                 <Button
                     android:id="@+id/cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="取消" />
+                    android:text="@string/cancel" />
             </LinearLayout>
 
 
