--- a/app/src/main/res/layout/become_store.xml
+++ b/app/src/main/res/layout/become_store.xml
@@ -47,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   名稱:"
+                    android:text="@string/username"
                     android:textSize="40sp" />
 
                 <EditText
@@ -71,7 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   地址:"
+                    android:text="@string/address"
                     android:textSize="40sp" />
 
                 <EditText
@@ -95,7 +95,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="營業時間:"
+                    android:text="@string/workertime"
                     android:textSize="36sp" />
 
                 <EditText
@@ -119,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="停車資訊:"
+                    android:text="@string/parking"
                     android:textSize="36sp" />
 
                 <EditText
@@ -143,7 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   電話"
+                    android:text="@string/phone"
                     android:textSize="36sp" />
 
                 <EditText
@@ -163,13 +163,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/Decorating"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="店內照片:"
-                android:textSize="30sp"/>
+                <TextView
+                    android:id="@+id/Decorating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/decorating"
+                    android:textSize="30sp" />
 
             <EditText
                 android:id="@+id/decorating"
@@ -180,12 +180,12 @@
                 android:inputType="textPersonName"
                 android:text="Name" />
 
-            <Button
-                android:id="@+id/decoratingupdate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="上傳" />
+                <Button
+                    android:id="@+id/decoratingupdate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/update" />
         </LinearLayout>
 
 
@@ -200,7 +200,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="菜單照片:"
+                    android:text="@string/menu"
                     android:textSize="30sp" />
 
                 <EditText
@@ -217,7 +217,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="上傳" />
+                    android:text="@string/update" />
             </LinearLayout>
 
 
@@ -232,14 +232,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="註冊" />
+                    android:text="@string/registered" />
 
                 <Button
                     android:id="@+id/cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="取消" />
+                    android:text="@string/cancel" />
             </LinearLayout>
 
 
