--- a/app/src/main/res/layout/edit_member.xml
+++ b/app/src/main/res/layout/edit_member.xml
@@ -47,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   帳號:"
+                    android:text="@string/member_number"
                     android:textSize="40sp" />
 
                 <EditText
@@ -71,7 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   密碼:"
+                    android:text="@string/password"
                     android:textSize="40sp" />
 
                 <EditText
@@ -88,7 +88,7 @@
                 android:id="@+id/Resetpassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="重設密碼" />
+                android:text="@string/resetpassword" />
 
             <LinearLayout
                 android:id="@+id/Sex_frame"
@@ -101,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="  性別:"
+                    android:text="@string/sex"
                     android:textSize="40sp" />
 
             </LinearLayout>
@@ -123,7 +123,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:onClick="checkButton"
-                        android:text="男" />
+                        android:text="@string/man" />
 
                     <RadioButton
                         android:id="@+id/radio_f"
@@ -131,7 +131,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:onClick="checkButton"
-                        android:text="女" />
+                        android:text="@string/woman" />
                 </RadioGroup>
             </LinearLayout>
 
@@ -146,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   暱稱:"
+                    android:text="@string/nickname"
                     android:textSize="40sp" />
 
                 <EditText
@@ -170,7 +170,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e-mail:"
+                    android:text="@string/email"
                     android:textSize="40sp" />
 
                 <EditText
@@ -195,14 +195,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="確認" />
+                    android:text="@string/confirm" />
 
                 <Button
                     android:id="@+id/cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="取消" />
+                    android:text="@string/cancel" />
             </LinearLayout>
 
 
