--- a/app/src/main/res/layout/lookmember.xml
+++ b/app/src/main/res/layout/lookmember.xml
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   帳號:"
+                    android:text="@string/member_number"
                     android:textSize="40sp" />
 
                 <EditText
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   性別:"
+                    android:text="@string/sex"
                     android:textSize="40sp" />
 
                 <EditText
@@ -97,7 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   暱稱:"
+                    android:text="@string/nickname"
                     android:textSize="40sp" />
 
                 <EditText
@@ -121,7 +121,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e-mail:"
+                    android:text="@string/email"
                     android:textSize="40sp" />
 
                 <EditText
@@ -145,7 +145,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="所屬店家:"
+                    android:text="@string/belongstore"
                     android:textSize="36sp" />
 
                 <EditText
@@ -170,7 +170,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="已發表評論:"
+                    android:text="@string/commen"
                     android:textSize="32sp" />
 
                 <EditText
@@ -195,7 +195,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="狀態"
+                    android:text="@string/status"
                     android:textSize="40sp" />
 
                 <EditText
