--- a/app/src/main/res/layout/registered_member.xml
+++ b/app/src/main/res/layout/registered_member.xml
@@ -47,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   帳號:"
+                    android:text="@string/member_number"
                     android:textSize="40sp" />
 
                 <EditText
@@ -71,7 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   密碼:"
+                    android:text="@string/password"
                     android:textSize="40sp" />
 
                 <EditText
@@ -95,7 +95,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="  性別:"
+                    android:text="@string/sex"
                     android:textSize="40sp" />
 
             </LinearLayout>
@@ -117,7 +117,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:onClick="checkButton"
-                        android:text="男" />
+                        android:text="@string/man" />
 
                     <RadioButton
                         android:id="@+id/radio_f"
@@ -125,7 +125,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:onClick="checkButton"
-                        android:text="女" />
+                        android:text="@string/woman" />
                 </RadioGroup>
             </LinearLayout>
 
@@ -140,7 +140,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   暱稱:"
+                    android:text="@string/nickname"
                     android:textSize="40sp" />
 
                 <EditText
@@ -164,7 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e-mail:"
+                    android:text="@string/email"
                     android:textSize="40sp" />
 
                 <EditText
@@ -189,14 +189,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="註冊" />
+                    android:text="@string/registered" />
 
                 <Button
                     android:id="@+id/cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="取消" />
+                    android:text="@string/cancel" />
             </LinearLayout>
 
 
