--- a/app/src/main/res/layout/become_store.xml
+++ b/app/src/main/res/layout/become_store.xml
@@ -163,30 +163,39 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/Decorating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/decorating"
-                    android:textSize="30sp" />
-
-            <EditText
-                android:id="@+id/decorating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name" />
-
-                <Button
-                    android:id="@+id/decoratingupdate"
+                <GridLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/update" />
-        </LinearLayout>
+                    android:columnCount="3"
+                    android:rowCount="1">
+
+                    <TextView
+                        android:id="@+id/Decorating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/decorating"
+                        android:textSize="30sp" />
+
+                    <ListView
+                        android:id="@+id/DecoratingListView"
+                        android:layout_width="160dp"
+                        android:layout_height="60dp"
+                        android:layout_below="@+id/linearLayout" />
+
+
+
+                    <Button
+                        android:id="@+id/decoratingupdate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/update" />
+                </GridLayout>
+
+
+            </LinearLayout>
 
 
             <LinearLayout
@@ -198,19 +207,18 @@
                 <TextView
                     android:id="@+id/Menu"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/menu"
                     android:textSize="30sp" />
 
-                <EditText
-                    android:id="@+id/menu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    android:text="Name" />
+                <ListView
+                    android:id="@+id/MenuListView"
+                    android:layout_width="160dp"
+                    android:layout_height="60dp"
+                    android:layout_below="@+id/linearLayout" />
+
+
 
                 <Button
                     android:id="@+id/menuupdate"
