--- a/app/src/main/res/layout/edit_member.xml
+++ b/app/src/main/res/layout/edit_member.xml
@@ -44,11 +44,11 @@
 
                 <TextView
                     android:id="@+id/MemberNumber"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/member_number"
-                    android:textSize="40sp" />
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/memberNumber"
@@ -68,11 +68,11 @@
 
                 <TextView
                     android:id="@+id/Password"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/password"
-                    android:textSize="40sp" />
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/password"
@@ -96,43 +96,52 @@
                 android:layout_height="61dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/Sex"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/sex"
-                    android:textSize="40sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/radiobutton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <RadioGroup
+                <GridLayout
                     android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:orientation="horizontal">
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
-                    <RadioButton
-                        android:id="@+id/radio_m"
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/Sex"
+                        android:layout_width="135dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:onClick="checkButton"
-                        android:text="@string/man" />
+                        android:text="@string/sex"
+                        android:textSize="@dimen/title_size" />
 
-                    <RadioButton
-                        android:id="@+id/radio_f"
+                    <LinearLayout
+                        android:id="@+id/radiobutton"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:onClick="checkButton"
-                        android:text="@string/woman" />
-                </RadioGroup>
+                        android:orientation="horizontal">
+
+                        <RadioGroup
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
+
+                            <RadioButton
+                                android:id="@+id/radio_m"
+                                android:layout_width="250dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:onClick="checkButton"
+                                android:text="@string/man" />
+
+                            <RadioButton
+                                android:id="@+id/radio_f"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:onClick="checkButton"
+                                android:text="@string/woman" />
+                        </RadioGroup>
+                    </LinearLayout>
+
+                </GridLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -143,11 +152,11 @@
 
                 <TextView
                     android:id="@+id/Nickname"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/nickname"
-                    android:textSize="40sp" />
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/nickname"
@@ -171,7 +180,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/email"
-                    android:textSize="40sp" />
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/e-mail"
