--- a/app/src/main/res/layout/become_store.xml
+++ b/app/src/main/res/layout/become_store.xml
@@ -44,11 +44,11 @@
 
                 <TextView
                     android:id="@+id/UserName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/username"
-                    android:textSize="40sp" />
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/userName"
@@ -68,11 +68,11 @@
 
                 <TextView
                     android:id="@+id/Address"
-                    android:layout_width="wrap_content"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/address"
-                    android:textSize="40sp" />
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/address"
@@ -96,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/workertime"
-                    android:textSize="36sp" />
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/workertime"
@@ -120,7 +120,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/parking"
-                    android:textSize="36sp" />
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/parking"
@@ -140,11 +140,11 @@
 
                 <TextView
                     android:id="@+id/Phone"
-                    android:layout_width="wrap_content"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/phone"
-                    android:textSize="36sp" />
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/phone"
@@ -176,11 +176,11 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/decorating"
-                        android:textSize="30sp" />
+                        android:textSize="@dimen/title_size" />
 
                     <ListView
                         android:id="@+id/DecoratingListView"
-                        android:layout_width="160dp"
+                        android:layout_width="170dp"
                         android:layout_height="60dp"
                         android:layout_below="@+id/linearLayout" />
 
@@ -204,28 +204,34 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/Menu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/menu"
-                    android:textSize="30sp" />
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
-                <ListView
-                    android:id="@+id/MenuListView"
-                    android:layout_width="160dp"
-                    android:layout_height="60dp"
-                    android:layout_below="@+id/linearLayout" />
+                    <TextView
+                        android:id="@+id/Menu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/menu"
+                        android:textSize="@dimen/title_size" />
+
+                    <ListView
+                        android:id="@+id/MenuListView"
+                        android:layout_width="170dp"
+                        android:layout_height="60dp"
+                        android:layout_below="@+id/linearLayout" />
+
+                    <Button
+                        android:id="@+id/menuupdate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/update" />
+                </GridLayout>
 
 
-
-                <Button
-                    android:id="@+id/menuupdate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/update" />
             </LinearLayout>
 
 
