--- a/app/src/main/res/layout/lookpush.xml
+++ b/app/src/main/res/layout/lookpush.xml
@@ -14,7 +14,9 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="@string/push_manage"
+        />
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawerLayout"
@@ -40,14 +42,6 @@
                     android:layout_weight="1"
                     android:text="@string/Previous_page" />
 
-                <TextView
-                    android:id="@+id/Push_manage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/push_manage"
-                    android:textSize="40sp" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -67,10 +61,11 @@
 
                 <TextView
                     android:id="@+id/push_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="88dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/push_name" />
+                    android:text="@string/push_name"
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/editText2"
@@ -100,7 +95,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/send_time" />
+                        android:text="@string/send_time"
+                        android:textSize="@dimen/title_size" />
                 </LinearLayout>
 
 
@@ -133,7 +129,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/push_content" />
+                    android:text="@string/push_content"
+                    android:textSize="@dimen/title_size" />
             </LinearLayout>
 
             <LinearLayout
