--- a/app/src/main/res/layout/push_add.xml
+++ b/app/src/main/res/layout/push_add.xml
@@ -14,7 +14,9 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="@string/addpush"
+        />
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawerLayout"
@@ -39,14 +41,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/Previous_page" />
-
-                <TextView
-                    android:id="@+id/Push_manage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/addpush"
-                    android:textSize="40sp" />
 
                 <Button
                     android:id="@+id/confirm"
@@ -74,10 +68,11 @@
 
                 <TextView
                     android:id="@+id/push_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="88dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/push_name" />
+                    android:text="@string/push_name"
+                    android:textSize="@dimen/title_size" />
 
                 <EditText
                     android:id="@+id/editText2"
@@ -107,7 +102,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/send_time" />
+                        android:text="@string/send_time"
+                        android:textSize="@dimen/title_size" />
                 </LinearLayout>
 
 
@@ -140,7 +136,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/push_content" />
+                    android:text="@string/push_content"
+                    android:textSize="@dimen/title_size" />
             </LinearLayout>
 
             <LinearLayout
