--- a/app/src/main/res/layout/order.xml
+++ b/app/src/main/res/layout/order.xml
@@ -28,11 +28,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/orderButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/orderNow" />
+
 
             <ListView
                 android:id="@+id/orderMenu"
@@ -48,30 +44,41 @@
                 android:layout_alignParentBottom="true"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/orderStatisticsTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="14dp"
-                    android:layout_weight="30"
-                    android:text="共 0 個便當，0 元"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:columnCount="3"
+                    android:rowCount="2">
 
-                <Button
-                    android:id="@+id/undoButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/undo" />
+                    <TextView
+                        android:id="@+id/orderStatisticsTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnSpan="2"
+                        android:layout_columnWeight="2"
+                        android:layout_marginLeft="14dp"
+                        android:text="共 0 個便當，0 元"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp" />
 
-                <Button
-                    android:id="@+id/clearButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/clear" />
+                    <Button
+                        android:id="@+id/clearButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnSpan="1"
+                        android:text="@string/clear" />
+
+                    <Button
+                        android:id="@+id/orderButtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_columnSpan="3"
+                        android:text="@string/orderNow" />
+
+                </GridLayout>
+
             </LinearLayout>
+
         </RelativeLayout>
         <!-- The navigation drawer -->
         <ListView
