--- a/app/src/main/res/layout/addstore.xml
+++ b/app/src/main/res/layout/addstore.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
@@ -12,10 +14,11 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_weight="1"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="新增店家"
+        />
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawerLayout"
@@ -93,7 +96,7 @@
 
                 <TextView
                     android:id="@+id/Phone"
-                    android:layout_width="130dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/phone"
@@ -102,7 +105,7 @@
                 <EditText
                     android:id="@+id/phone"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -113,7 +116,7 @@
             <LinearLayout
                 android:id="@+id/Menu_frame"
                 android:layout_width="match_parent"
-                android:layout_height="197dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
@@ -162,17 +165,6 @@
             </LinearLayout>
 
 
-
-
-
-
-
-
-
-
-
-
-
         </LinearLayout>
         <!-- The navigation drawer -->
         <ListView
@@ -183,7 +175,7 @@
             android:background="#111"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
-            android:dividerHeight="0dp" >
+            android:dividerHeight="0dp">
 
 
         </ListView>
