--- a/app/src/main/res/layout/become_store.xml
+++ b/app/src/main/res/layout/become_store.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
@@ -12,10 +12,11 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_weight="1"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="成為店家"
+        />
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawerLayout"
@@ -44,7 +45,7 @@
 
                 <TextView
                     android:id="@+id/UserName"
-                    android:layout_width="130dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/username"
@@ -68,7 +69,7 @@
 
                 <TextView
                     android:id="@+id/Address"
-                    android:layout_width="130dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/address"
@@ -140,7 +141,7 @@
 
                 <TextView
                     android:id="@+id/Phone"
-                    android:layout_width="130dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/phone"
@@ -158,10 +159,10 @@
 
 
             <LinearLayout
-            android:id="@+id/Decorating_frame"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                android:id="@+id/Decorating_frame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <GridLayout
                     android:layout_width="wrap_content"
@@ -183,7 +184,6 @@
                         android:layout_width="170dp"
                         android:layout_height="60dp"
                         android:layout_below="@+id/linearLayout" />
-
 
 
                     <Button
@@ -257,19 +257,6 @@
             </LinearLayout>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
         </LinearLayout>
         <!-- The navigation drawer -->
         <ListView
@@ -280,7 +267,7 @@
             android:background="#111"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
-            android:dividerHeight="0dp" >
+            android:dividerHeight="0dp">
 
 
         </ListView>
