--- a/app/src/main/res/layout/edit_storeinfo.xml
+++ b/app/src/main/res/layout/edit_storeinfo.xml
@@ -15,7 +15,9 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="編輯店家"
+        />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
