--- a/app/src/main/res/layout/lookmember.xml
+++ b/app/src/main/res/layout/lookmember.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
@@ -12,11 +12,11 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_weight="1"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="查看店家"
+        />
 
 
     <android.support.v4.widget.DrawerLayout
@@ -191,14 +191,6 @@
             </LinearLayout>
 
 
-
-
-
-
-
-
-
-
         </LinearLayout>
         <!-- The navigation drawer -->
         <ListView
@@ -209,7 +201,7 @@
             android:background="#111"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
-            android:dividerHeight="0dp" >
+            android:dividerHeight="0dp">
 
 
         </ListView>
