--- a/app/src/main/res/layout/lookpush.xml
+++ b/app/src/main/res/layout/lookpush.xml
@@ -15,7 +15,7 @@
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="@string/push_manage"
+        app:title="管理推播"
         />
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
