--- a/app/src/main/res/layout/bug_report.xml
+++ b/app/src/main/res/layout/bug_report.xml
@@ -32,6 +32,8 @@
             android:background="?attr/colorButtonNormal"
             android:ems="10"
             android:inputType="textMultiLine"
+            android:selectAllOnFocus="false"
+            android:singleLine="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
